2003-12-03  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* archures.c (bfd_mach_m32r2): Add new machine type.
	* bfd-in2.h: Regenerate.
	* cpu-m32r.c : Add new machine type.
	* elf32-m32r.c (m32r_elf_object_p, m32r_elf_final_write_processing,
        m32r_elf_merge_private_bfd_data): Add support for new machine
	type.

2003-12-03  Dave Airlie  <airlied@linux.ie>

	* config.bfd: Add vax-linux-gnu target.
	* configure.in: Likewise.
	* configure: Regenerate.

2003-12-03  Alan Modra  <amodra@bigpond.net.au>

	* ecoff.c (ecoff_link_add_archive_symbols): Update for renamed
	bfd_link_hash_entry field "next" -> "und_next".
	* linker.c (_bfd_link_hash_newfunc): Likewise.
	(bfd_link_add_undef): Likewise.
	(_bfd_generic_link_add_archive_symbols): Likewise.
	(_bfd_generic_link_add_one_symbol): Likewise.
	* xcofflink.c (xcoff_link_add_symbols): Likewise.

2003-12-02  Nick Clifton  <nickc@redhat.com>

	* configure.in (ALL_LINGUAS): Add ro.
	* po/ro.po: New Romanian translation.

2003-12-02  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2003-12-01  Dmitry Semyonov  <Dmitry.Semyonov@oktet.ru>

	* coffcode.h (coff_compute_section_file_positions): Set page_size
	to 1 instead of 0 in the case file alignment value is zero.

2003-12-01  Kazu Hirata  <kazu@cs.umass.edu>

	* coff-rs6000.c: Remove ARGSUSED and VARARGS.
	* coff64-rs6000.c: Likewise.
	* coffcode.h: Likewise.
	* elf32-vax.c: Likewise.
	* hash.c: Likewise.
	* hppabsd-core.c: Likewise.
	* hpux-core.c: Likewise.
	* ihex.c: Likewise.
	* netbsd-core.c: Likewise.
	* osf-core.c: Likewise.
	* pdp11.c: Likewise.
	* ptrace-core.c: Likewise.
	* sco5-core.c: Likewise.
	* section.c: Likewise.
	* sunos.c: Likewise.
	* trad-core.c: Likewise.

2003-12-01  Alan Modra  <amodra@bigpond.net.au>

	* elf-bfd.h (is_elf_hash_table): Take hash tab rather than info arg.
	* elf.c (_bfd_elf_merge_sections): Adjust to suit.
	(_bfd_elf_link_just_syms): Likewise.